# hts-coils

./: .gitignore  .gitmodules  COMSOL_INTEGRATION.md  Dockerfile  HIGH_FIELD_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  RELEASE_NOTES.md  TASK_COMPLETION_SUMMARY.md  author_rewrite.py  corrected_high_field_report.json  corrected_manuscript_update.tex  experimental_validation_framework.py  generate_corrected_report.py  high_field_manuscript_update.tex  high_field_test_report.json  hts-coils.code-workspace  hts_coils_antimatter_containment.tex  pyproject.toml  rebco_lecture_remarks.md  requirements-fea.txt  requirements.txt  requirements_validation.txt  run_high_field_simulation.py  soliton_validation_report.json  test_fea_integration.py  test_high_field_implementation.py  test_high_field_simple.py  tolerance_analysis.json  validation_test.json
docker/: Dockerfile  entrypoint.sh  requirements_frozen.txt
docs/: COMSOL_INSTALLATION_GUIDE.md  TODO.ndjson  UQ-TODO-RESOLVED.ndjson  UQ-TODO.ndjson  VnV-TODO-RESOLVED.ndjson  VnV-TODO.ndjson  artifacts_schema.md  how_to_reach_5T.md  howto_5T.md  manuscript_publishability_assessment.md  progress_log-completed.ndjson  progress_log.ndjson  prototype_experimental_plan.md  roadmap-completed.ndjson  roadmap.ndjson
examples/: baseline_single.json  helmholtz_config.json  helmholtz_near_1pct.json  single_config.json  stack_config.json
papers/: hts_coils_antimatter_containment.tex  hts_coils_ieee_format.tex  hts_coils_journal_format.tex  peer_review_completion_summary.md  rebco_hts_coil_optimization_fusion_antimatter.tex
(+99 files in other folders)
